# GLProjects

./: .gitignore
TextVerification/: .gitignore  CMakeLists.txt  main.cpp  readme.md
TextVerification/headers/: BinarySearchTreeDictionary.h  DictionaryFactory.h  FileReader.h  FileSystemHelper.h  HashTableDictionary.h  PunctuationFilterFileReader.h  SpecializedStringBinarySearchTree.h  SpecializedStringHashTable.h  SpecializedStringHashTableDictionary.h  StringHelper.h  TextChecker.h  TextVerificationFacade.h  VectorDictionary.h
TextVerification/headers/Checkers/: ITextChecker.h  TextChecker.h
TextVerification/headers/DataStructures/: BinarySearchTree.h  SpecHashTable.h  Trie.h
TextVerification/headers/Dictionaries/: BinarySearchTreeDictionary.h  DictionaryFactory.h  HashTableDictionary.h  IDictionary.h  IDictionaryFactory.h  SpecHashTableDictionary.h  TrieDictionary.h  VectorDictionary.h
TextVerification/headers/Readers/: FileReader.h  IReader.h  PunctuationFilterFileReader.h
TextVerification/headers/interfaces/: IDictionary.h  IDictionaryFactory.h  IReader.h  ITextChecker.h
TextVerification/sources/: BinarySearchTreeDictionary.cpp  DictionaryFactory.cpp  FileReader.cpp  FileSystemHelper.cpp  HashTableDictionary.cpp  PunctuationFilterFileReader.cpp  SpecializedStringBinarySearchTree.cpp  SpecializedStringHashTable.cpp  SpecializedStringHashTableDictionary.cpp  StringHelper.cpp  TextChecker.cpp  TextVerificationFacade.cpp  VectorDictionary.cpp
TextVerification/sources/Checkers/: TextChecker.cpp
TextVerification/sources/DataStructures/: BinarySearchTree.cpp  (+2 more)
(+28 files in other folders)
